--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body { padding: 20px; background-color: #f8f9fa; }
-        .container { max-width: 900px; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        .response-area { min-height: 150px; background-color: #f1f1f1; border: 1px solid #ccc; padding: 15px; border-radius: 5px; white-space: pre-wrap; font-family: monospace; font-size: 0.9rem; }
-        .form-label { font-weight: bold; }
-        h2 { margin-top: 30px; border-bottom: 2px solid #28a745; padding-bottom: 10px; }
+        .container { max-width: 1200px; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        .response-area { 
+            height: 100%; 
+            min-height: 500px; 
+            background-color: #f1f1f1; 
+            border: 1px solid #ccc; 
+            padding: 15px; 
+            border-radius: 5px; 
+            white-space: pre-wrap; 
+            font-family: monospace; 
+            font-size: 0.9rem; 
+        }
+        .form-section { margin-bottom: 25px; }
+        h2 { font-size: 1.2rem; font-weight: bold; margin-bottom: 15px; color: #333; }
         .btn-primary { background-color: #28a745; border-color: #28a745; }
-        .btn-primary:hover { background-color: #218838; border-color: #1e7e34; }
+        .btn-primary:hover { background-color: #218838; }
     </style>
 </head>
 <body>
@@ -20,70 +30,54 @@
 <div class="container">
     <h1 class="text-center mb-4">Green-API Test Integration</h1>
     
-    <div class="row mb-4">
-        <div class="col-md-6">
-            <label for="idInstance" class="form-label">idInstance</label>
-            <input type="text" class="form-control" id="idInstance" placeholder="Введите idInstance">
-        </div>
-        <div class="col-md-6">
-            <label for="apiTokenInstance" class="form-label">apiTokenInstance</label>
-            <input type="text" class="form-control" id="apiTokenInstance" placeholder="Введите apiTokenInstance">
-        </div>
-    </div>
-
-    <div class="row mb-4">
-        <div class="col-md-6">
-            <button class="btn btn-primary w-100 mb-2" onclick="getSettings()">getSettings</button>
-        </div>
-        <div class="col-md-6">
-            <button class="btn btn-primary w-100 mb-2" onclick="getStateInstance()">getStateInstance</button>
-        </div>
-    </div>
-
-    <hr>
-
-    <div class="row mb-4">
-        <h2>Send Message</h2>
-        <div class="col-md-6">
-            <label class="form-label">Номер телефона</label>
-            <input type="text" class="form-control" id="msgPhone" placeholder="77771234567">
-        </div>
-        <div class="col-md-12 mt-2">
-            <label class="form-label">Сообщение</label>
-            <textarea class="form-control" id="msgText" rows="3" placeholder="Hello World"></textarea>
-        </div>
-        <div class="col-md-12 mt-3">
-            <button class="btn btn-primary" onclick="sendMessage()">sendMessage</button>
-        </div>
-    </div>
-
-    <hr>
-
-    <div class="row mb-4">
-        <h2>Send File by URL</h2>
-        <div class="col-md-6">
-            <label class="form-label">Номер телефона</label>
-            <input type="text" class="form-control" id="filePhone" placeholder="77771234567">
-        </div>
-        <div class="col-md-12 mt-2">
-            <label class="form-label">Ссылка на файл</label>
-            <input type="text" class="form-control" id="fileUrl" placeholder="https://example.com/file.pdf">
-        </div>
-        <div class="col-md-12 mt-3">
-            <button class="btn btn-primary" onclick="sendFileByUrl()">sendFileByUrl</button>
-        </div>
-    </div>
-
     <div class="row">
-        <label class="form-label">Ответ (Response):</label>
-        <div class="col-12">
-            <div class="response-area" id="response">Ожидание действий...</div>
+        <div class="col-md-7">
+            
+            <div class="form-section">
+                <div class="mb-2">
+                    <input type="text" class="form-control" id="idInstance" placeholder="idInstance">
+                </div>
+                <div class="mb-2">
+                    <input type="text" class="form-control" id="apiTokenInstance" placeholder="ApiTokenInstance">
+                </div>
+                <button class="btn btn-primary w-100 mb-2" onclick="getSettings()">getSettings</button>
+                <button class="btn btn-primary w-100" onclick="getStateInstance()">getStateInstance</button>
+            </div>
+
+            <hr>
+
+            <div class="form-section">
+                <div class="mb-2">
+                    <input type="text" class="form-control" id="msgPhone" placeholder="77771234567">
+                </div>
+                <div class="mb-2">
+                    <textarea class="form-control" id="msgText" rows="3" placeholder="Hello World!"></textarea>
+                </div>
+                <button class="btn btn-primary w-100" onclick="sendMessage()">sendMessage</button>
+            </div>
+
+            <hr>
+
+            <div class="form-section">
+                <div class="mb-2">
+                    <input type="text" class="form-control" id="filePhone" placeholder="77771234567">
+                </div>
+                <div class="mb-2">
+                    <input type="text" class="form-control" id="fileUrl" placeholder="https://my.site.com/img/horse.png">
+                </div>
+                <button class="btn btn-primary w-100" onclick="sendFileByUrl()">sendFileByUrl</button>
+            </div>
+
+        </div>
+
+        <div class="col-md-5">
+            <label class="form-label fw-bold">Ответ:</label>
+            <div class="response-area" id="response"></div>
         </div>
     </div>
 </div>
 
 <script>
-    // Функция для получения URL API
     function getApiUrl(method) {
         const id = document.getElementById('idInstance').value;
         const token = document.getElementById('apiTokenInstance').value;
@@ -94,103 +88,55 @@
         return `https://api.green-api.com/waInstance${id}/${method}/${token}`;
     }
 
-    // Вывод ответа на экран
     function displayResponse(data) {
         document.getElementById('response').innerText = JSON.stringify(data, null, 4);
     }
 
-    // 1. getSettings
     async function getSettings() {
         const url = getApiUrl('getSettings');
         if (!url) return;
-
         try {
             const response = await fetch(url);
             const data = await response.json();
             displayResponse(data);
-        } catch (error) {
-            displayResponse({ error: error.message });
-        }
+        } catch (error) { displayResponse(error); }
     }
 
-    // 2. getStateInstance
     async function getStateInstance() {
         const url = getApiUrl('getStateInstance');
         if (!url) return;
-
         try {
             const response = await fetch(url);
             const data = await response.json();
             displayResponse(data);
-        } catch (error) {
-            displayResponse({ error: error.message });
-        }
+        } catch (error) { displayResponse(error); }
     }
 
-    // 3. sendMessage
     async function sendMessage() {
         const url = getApiUrl('sendMessage');
         if (!url) return;
-
         const phone = document.getElementById('msgPhone').value;
         const message = document.getElementById('msgText').value;
-
-        if (!phone || !message) {
-            alert('Заполните номер и сообщение');
-            return;
-        }
-
-        const body = {
-            chatId: `${phone}@c.us`,
-            message: message
-        };
-
+        const body = { chatId: `${phone}@c.us`, message: message };
         try {
-            const response = await fetch(url, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(body)
-            });
+            const response = await fetch(url, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(body) });
             const data = await response.json();
             displayResponse(data);
-        } catch (error) {
-            displayResponse({ error: error.message });
-        }
+        } catch (error) { displayResponse(error); }
     }
 
-    // 4. sendFileByUrl
     async function sendFileByUrl() {
         const url = getApiUrl('sendFileByUrl');
         if (!url) return;
-
         const phone = document.getElementById('filePhone').value;
         const fileUrl = document.getElementById('fileUrl').value;
-
-        if (!phone || !fileUrl) {
-            alert('Заполните номер и ссылку на файл');
-            return;
-        }
-
-        // 
         const fileName = fileUrl.split('/').pop() || 'file';
-
-        const body = {
-            chatId: `${phone}@c.us`,
-            urlFile: fileUrl,
-            fileName: fileName
-        };
-
+        const body = { chatId: `${phone}@c.us`, urlFile: fileUrl, fileName: fileName };
         try {
-            const response = await fetch(url, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(body)
-            });
+            const response = await fetch(url, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(body) });
             const data = await response.json();
             displayResponse(data);
-        } catch (error) {
-            displayResponse({ error: error.message });
-        }
+        } catch (error) { displayResponse(error); }
     }
 </script>
 
